5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1764_672.log
== TEST (2019-05-21 15:55:30) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 15:57:33) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
a= int(input('digite um numero inteiro'))
a >0
print (a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 15:58:43) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
a= int(input('digite um numero inteiro'))
while (a> 0):
	a=ones[0]
	print(a)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:21:43) 
-- CODE:
e incluir o módulo numpy
from numpy  import *
a= array(eval(input('digite um numeoro intero:  )
						  
a=ones(4, dtype=int)
print(a)  
						 
				  
				  
-- ERROR:
File "XXXX", line 1
    e incluir o módulo numpy
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:22:15) 
-- CODE:

from numpy  import *
a= array(eval(input('digite um numeoro intero: )) )
						  
a=ones(4, dtype=int)
print(a)  
						 
				  
				  
-- ERROR:
File "XXXX", line 3
    a= array(eval(input('digite um numeoro intero: )) )
                                                      ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:23:51) 
-- CODE:

from numpy  import *
a= array(eval(input('digite um numeoro intero: )))
						  
a=ones(4, dtype=int)
print(a)  
						 
				  
				  
-- ERROR:
File "XXXX", line 3
    a= array(eval(input('digite um numeoro intero: )))
                                                     ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:23:51) 
-- CODE:

from numpy  import *
a= array(eval(input('digite um numeoro intero: )))
						  
a=ones(4, dtype=int)
print(a)  
						 
				  
				  
-- ERROR:
File "XXXX", line 3
    a= array(eval(input('digite um numeoro intero: )))
                                                     ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:23:51) 
-- CODE:

from numpy  import *
a= array(eval(input('digite um numeoro intero: )))
						  
a=ones(4, dtype=int)
print(a)  
						 
				  
				  
-- ERROR:
File "XXXX", line 3
    a= array(eval(input('digite um numeoro intero: )))
                                                     ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:23:51) 
-- CODE:

from numpy  import *
a= array(eval(input('digite um numeoro intero: )))
						  
a=ones(4, dtype=int)
print(a)  
						 
				  
				  
-- ERROR:
File "XXXX", line 3
    a= array(eval(input('digite um numeoro intero: )))
                                                     ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:23:51) 
-- CODE:

from numpy  import *
a= array(eval(input('digite um numeoro intero: )))
						  
a=ones(4, dtype=int)
print(a)  
						 
				  
				  
-- ERROR:
File "XXXX", line 3
    a= array(eval(input('digite um numeoro intero: )))
                                                     ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:23:51) 
-- CODE:

from numpy  import *
a= array(eval(input('digite um numeoro intero: )))
						  
a=ones(4, dtype=int)
print(a)  
						 
				  
				  
-- ERROR:
File "XXXX", line 3
    a= array(eval(input('digite um numeoro intero: )))
                                                     ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:23:51) 
-- CODE:

from numpy  import *
a= array(eval(input('digite um numeoro intero: )))
						  
a=ones(4, dtype=int)
print(a)  
						 
				  
				  
-- ERROR:
File "XXXX", line 3
    a= array(eval(input('digite um numeoro intero: )))
                                                     ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:23:51) 
-- CODE:

from numpy  import *
a= array(eval(input('digite um numeoro intero: )))
						  
a=ones(4, dtype=int)
print(a)  
						 
				  
				  
-- ERROR:
File "XXXX", line 3
    a= array(eval(input('digite um numeoro intero: )))
                                                     ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:23:51) 
-- CODE:

from numpy  import *
a= array(eval(input('digite um numeoro intero: )))
						  
a=ones(4, dtype=int)
print(a)  
						 
				  
				  
-- ERROR:
File "XXXX", line 3
    a= array(eval(input('digite um numeoro intero: )))
                                                     ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:23:51) 
-- CODE:

from numpy  import *
a= array(eval(input('digite um numeoro intero: )))
						  
a=ones(4, dtype=int)
print(a)  
						 
				  
				  
-- ERROR:
File "XXXX", line 3
    a= array(eval(input('digite um numeoro intero: )))
                                                     ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:23:51) 
-- CODE:

from numpy  import *
a= array(eval(input('digite um numeoro intero: )))
						  
a=ones(4, dtype=int)
print(a)  
						 
				  
				  
-- ERROR:
File "XXXX", line 3
    a= array(eval(input('digite um numeoro intero: )))
                                                     ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:23:51) 
-- CODE:

from numpy  import *
a= array(eval(input('digite um numeoro intero: )))
						  
a=ones(4, dtype=int)
print(a)  
						 
				  
				  
-- ERROR:
File "XXXX", line 3
    a= array(eval(input('digite um numeoro intero: )))
                                                     ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:23:51) 
-- CODE:

from numpy  import *
a= array(eval(input('digite um numeoro intero: )))
						  
a=ones(4, dtype=int)
print(a)  
						 
				  
				  
-- ERROR:
File "XXXX", line 3
    a= array(eval(input('digite um numeoro intero: )))
                                                     ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:24:23) 
-- CODE:

from numpy  import *
a= array(eval(input('digite um numeoro intero: ')))
						  
a=ones(4, dtype=int)
print(a)  
						 
				  
				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy  import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:25:07) 
-- CODE:

from numpy  import *
a= array(eval(input('digite um numeoro intero: ')))
						  
a=ones(a, dtype=int)
print(a)  
						 
				  
				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy  import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 16:25:17) 
-- CODE:

from numpy  import *
a= array(eval(input('digite um numeoro intero: ')))
						  
a=ones(a, dtype=int)
print(a)  
						 
				  
				  
-- EXECUTION TIME:
0.510573
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 22:11:02) 
-- CODE:
from numpy  import *
a= array(eval(input('digite um numeoro intero: ')))
						  
a=ones(a, dtype=int)
print(a)  
						 
				  
				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy  import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 22:11:03) 
-- CODE:
from numpy  import *
a= array(eval(input('digite um numeoro intero: ')))
						  
a=ones(a, dtype=int)
print(a)  
						 
				  
				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy  import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:46:41) 
-- CODE:
from numpy  import *
a= array(eval(input('digite um numeoro intero: ')))
						  
a=ones(a, dtype=int)
print(a)  
						 
				  
				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy  import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:46:56) 
-- CODE:
from numpy  import *
a= array(eval(input('digite um número intero: ')))
						  
a=ones(a, dtype=int)
print(a)  
						 
				  
				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy  import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:47:06) 
-- CODE:
from numpy  import *
a= array(eval(input('digite um numero intero: ')))
						  
a=ones(a, dtype=int)
print(a)  
						 
				  
				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy  import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:47:46) 
-- CODE:
from numpy  import *
a= array(eval(input('digite um numero intero: ')))
						  
a=ones(a, dtype=float)
print(a)  
						 
				  
				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy  import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:47:58) 
-- CODE:
from numpy  import *
a= array(eval(input('digite um numero intero: ')))
						  
a=ones(a, dtype=str)
print(a)  
						 
				  
				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy  import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:48:13) 
-- CODE:
from numpy  import *
a= array(eval(input('digite um numero intero: ')))
						  
a=zeros(a, dtype=str)
print(a)  
						 
				  
				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy  import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:48:27) 
-- CODE:
from numpy  import *
a= array(eval(input('digite um numero intero: ')))
						  
a=zeros(a, dtype=int)
print(a)  
						 
				  
				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy  import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:48:59) 
-- CODE:
from numpy  import *
a= array(eval(input('digite um numero intero: ')))
						  
a=ones(a, dtype=int)
print(a)  
						 
				  
				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy  import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:49:02) 
-- CODE:
from numpy  import *
a= array(eval(input('digite um numero intero: ')))
						  
a=ones(a, dtype=int)
print(a)  
						 
				  
				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy  import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:49:11) 
-- CODE:
from numpy  import *
a= array(eval(input('digite um numero intero: ')))
						  
a=ones(a, dtype=int)
print(a)  
						 
				  
				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy  import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:50:21) 
-- CODE:
from numpy  import *
a= array(eval(input('digite um numero intero: ')))
						  
a=ones(a)
print(a)  
						 
				  
				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy  import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 08:30:33) 
-- CODE:
#from numpy  import *#
#a= array(eval(input('digite um numero intero: ')))#
						  
#a=ones(a, dtype=int)#
#print(a)#

from numpy import *
# Leitura dos vetores
notas = array(eval(input("Informe as notas: ")))
cred = array(eval(input("Informe os creditos: ")))
i = 0 # Variavel contadora
numerador = 0 # Acumula produto notas * creditos
denominador = 0 # Acumula os creditos
while (i < size(notas)):
	numerador = numerador + notas[i] * cred[i]
	denominador = denominador + cred[i]
i = i + 1
coeficiente = numerador / denominador
print(round(coeficiente, 3))
						 
				  
				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 08:31:04) 
-- CODE:
#from numpy  import *#
#a= array(eval(input('digite um numero intero: ')))#
						  
#a=ones(a, dtype=int)#
#print(a)#

from numpy import *
# Leitura dos vetores
notas = array(eval(input("Informe as notas: ")))
cred = array(eval(input("Informe os creditos: ")))
i = 0 # Variavel contadora
numerador = 0 # Acumula produto notas * creditos
denominador = 0 # Acumula os creditos
while (i < size(notas)):
	numerador = numerador + notas[i] * cred[i]
	denominador = denominador + cred[i]
i = i + 1
coeficiente = numerador / denominador
print(round(coeficiente, 3))
						 
				  
				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 08:31:33) 
-- CODE:
#from numpy  import *#
#a= array(eval(input('digite um numero intero: ')))#
						  
#a=ones(a, dtype=int)#
#print(a)#

from numpy import *
# Leitura dos vetores
notas = array(eval(input("Informe as notas: ")))
cred = array(eval(input("Informe os creditos: ")))
i = 0 # Variavel contadora
numerador = 0 # Acumula produto notas * creditos
denominador = 0 # Acumula os creditos
while (i < size(notas)):
	numerador = numerador + notas[i] * cred[i]
	denominador = denominador + cred[i]
	i = i + 1
coeficiente = numerador / denominador
print(round(coeficiente, 3))
						 
				  
				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
